# sei-discord

./: .env_example  .gitignore  Cargo.toml  README.md  config.json  endpoints.md  roles.json
src/: api.rs  commands.rs  config.rs  handler.rs  main.rs  requests.rs  tiers.rs
src/api/: types.rs
src/commands/: company.rs  tier.rs
src/handler/: company.rs
src/tiers/: company.rs
