[package]
name = "sei-discord"
version = "0.1.0"
authors = ["CeSIUM <cesium@di.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9", default_features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "collector"] }
tokio = { version = "0.2", features = ["macros"] }
