[package]
name = "sei-discord"
version = "0.1.0"
authors = ["CeSIUM <cesium@di.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9", default_features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "collector"] }
tokio = { version = "0.2", features = ["macros"] }
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.0", features = ['blocking', 'json'] }
