[package]
name = "sei-discord"
version = "0.1.0"
authors = ["CeSIUM <cesium@di.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default_features = true, features = ["client", "gateway", "rustls_backend", "model", "utils", "collector", "framework"] }
tokio = { version = "1", features = ["macros", "sync", "rt"] }
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
lazy_static = "1.4.0"
reqwest = { version = "0.11.0", features = ['blocking', 'json'] }
